deploy: 9752d9b9bf7d2604076a6434f8be5b04d60fafb5

--- a/classes/AbstractExplorerActionRenderer.html
+++ b/classes/AbstractExplorerActionRenderer.html
@@ -123,6 +123,15 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Abstract base class for rendering actions in the explorer.
+This class provides common properties for action renderers,
+including the target data, action data, and form management.</p>
+
+            </p>
 
 
             <p class="comment">
@@ -195,10 +204,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-action-renderer.ts:25</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-action-renderer.ts:34</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The action-data to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -221,10 +236,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-action-renderer.ts:23</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-action-renderer.ts:30</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the actions to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -247,10 +268,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-action-renderer.ts:24</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-action-renderer.ts:32</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -273,10 +300,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-action-renderer.ts:22</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-action-renderer.ts:28</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The target data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -296,10 +329,19 @@
 import {FormGroup} from &quot;@angular/forms&quot;;
 import {InputSignal} from &quot;@angular/core&quot;;
 
+/**
+ * Abstract base class for rendering actions in the explorer.
+ * This class provides common properties for action renderers,
+ * including the target data, action data, and form management.
+ */
 export abstract class AbstractExplorerActionRenderer&lt;Data &#x3D; unknown&gt; implements ExplorerActionRenderer&lt;Data&gt; {
+  /** The target data associated with the actions. */
   target: InputSignal&lt;TargetData&gt;;
+  /** The data for the actions to be rendered. */
   data: InputSignal&lt;Data | Data[]&gt;;
+  /** The form group managing the entity data associated with the actions. */
   entityForm: InputSignal&lt;FormGroup&gt;;
+  /** The action-data to be rendered. */
   action: ExplorerAction;
 }
 
