--- a/classes/AbstractExplorerRendererComponent.html
+++ b/classes/AbstractExplorerRendererComponent.html
@@ -123,6 +123,16 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Abstract class that provides common functionality for renderer components.
+This abstract class defines the required properties and methods for
+rendering components in the explorer. It handles the merging of
+parameters and updating of data for child components.</p>
+
+            </p>
 
 
 
@@ -227,10 +237,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:29</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:37</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The column definition for the data being rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -254,10 +270,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:30</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:39</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data to be displayed in the component.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -280,10 +302,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:31</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:41</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group for managing entity data.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -307,10 +335,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:34</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:45</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Reference to the created component for rendering.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -336,7 +370,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:33</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:43</a></div>
                         </td>
                     </tr>
 
@@ -363,10 +397,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:28</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:35</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The target data to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -391,7 +431,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:32</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:42</a></div>
                         </td>
                     </tr>
 
@@ -427,14 +467,17 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="36"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:36</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="54"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:54</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>This method assigns renderer parameters and creates an instance of
+the renderer component, updating the view container accordingly.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -445,6 +488,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -459,6 +503,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The renderer loader to use for creating the component.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                         <tr>
                                                 <td>rendererParams</td>
@@ -471,6 +521,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The parameters specific to the renderer.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                         <tr>
                                                 <td>columnRendererParams</td>
@@ -483,6 +539,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>Additional parameters from the column definition.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -520,14 +582,17 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="48"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:48</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="69"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/abstract-explorer-renderer.component.ts:69</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>This method sets the current target, data, and form for the child
+component and triggers change detection to ensure the UI is updated.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -556,16 +621,34 @@
 import {ChangeDetectorRef, ComponentRef, InputSignal, ViewContainerRef} from &quot;@angular/core&quot;;
 import {FormGroup} from &quot;@angular/forms&quot;;
 
+/**
+ * Abstract class that provides common functionality for renderer components.
+ * This abstract class defines the required properties and methods for
+ * rendering components in the explorer. It handles the merging of
+ * parameters and updating of data for child components.
+ */
 export abstract class AbstractExplorerRendererComponent {
 
+  /** The target data to be rendered. */
   abstract target: InputSignal&lt;TargetData&gt;;
+  /** The column definition for the data being rendered. */
   abstract column: InputSignal&lt;ExplorerColumn&gt;;
+  /** The data to be displayed in the component. */
   abstract data: InputSignal&lt;{ [k: string]: unknown }&gt;;
+  /** The form group for managing entity data. */
   entityForm: InputSignal&lt;FormGroup&gt;;
   protected abstract viewContainer: ViewContainerRef;
   protected abstract readonly renderers: ExplorerRendererLoader[];
+  /** Reference to the created component for rendering. */
   private ref: ComponentRef&lt;ExplorerRenderer&gt;;
 
+  /**
+   * This method assigns renderer parameters and creates an instance of
+   * the renderer component, updating the view container accordingly.
+   * @param renderer - The renderer loader to use for creating the component.
+   * @param rendererParams - The parameters specific to the renderer.
+   * @param columnRendererParams - Additional parameters from the column definition.
+   */
   protected mergeParamsAndDrawComponent(
     renderer: ExplorerRendererLoader, rendererParams: object, columnRendererParams: object) {
     Object.assign(rendererParams, columnRendererParams);
@@ -577,7 +660,10 @@ export abstract class AbstractExplorerRendererComponent {
       this.patchComponentData();
     });
   }
-
+  /**
+   * This method sets the current target, data, and form for the child
+   * component and triggers change detection to ensure the UI is updated.
+   */
   protected patchComponentData() {
     this.ref.instance.column &#x3D; this.column();
     this.ref.instance.target &#x3D; this.target();
