--- a/classes/DateObjectRendererParams.html
+++ b/classes/DateObjectRendererParams.html
@@ -123,6 +123,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Parameters for configuring the DateObjectRenderer component.</p>
+
+            </p>
 
 
 
@@ -198,7 +205,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:25</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:34</a></div>
                         </td>
                     </tr>
 
@@ -224,7 +231,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:19</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:28</a></div>
                         </td>
                     </tr>
 
@@ -250,7 +257,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:24</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:33</a></div>
                         </td>
                     </tr>
 
@@ -276,7 +283,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:23</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:32</a></div>
                         </td>
                     </tr>
 
@@ -302,7 +309,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:20</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:29</a></div>
                         </td>
                     </tr>
 
@@ -328,7 +335,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:22</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:31</a></div>
                         </td>
                     </tr>
 
@@ -354,7 +361,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:21</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.types.ts:30</a></div>
                         </td>
                     </tr>
 
