--- a/interfaces/StringObjectRendererParams.html
+++ b/interfaces/StringObjectRendererParams.html
@@ -126,6 +126,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Parameters for configuring the StringObjectRenderer component.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
