--- a/miscellaneous/functions.html
+++ b/miscellaneous/functions.html
@@ -677,11 +677,17 @@
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Creates a new instance of the field filter form.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="../interfaces/FieldFilterForm.html" target="_self" >FormGroup&lt;FieldFilterForm&gt;</a></code>
 
                         </div>
+                            <div class="io-description">
+                                <p>The created field filter form.</p>
+
+                            </div>
                 </td>
             </tr>
         </tbody>
@@ -710,11 +716,17 @@
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Creates a form for editing a configuration property.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="../miscellaneous/typealiases.html#ConfigEditorForm" target="_self" >FormGroup&lt;ConfigEditorForm&gt;</a></code>
 
                         </div>
+                            <div class="io-description">
+                                <p>FormGroup with controls for key and value</p>
+
+                            </div>
                 </td>
             </tr>
         </tbody>
@@ -813,6 +825,13 @@
 
 
 
+            <tr>
+                <td class="col-md-4">
+                        <div class="io-description"><p>Creates a new form group for password input.</p>
+</div>
+
+                </td>
+            </tr>
         </tbody>
     </table>
 </section>    <h3>lib/src/components/profile/src/profile.constants.ts</h3>
@@ -1296,11 +1315,18 @@
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Provides an array of action renderers for the explorer.
+Each renderer is defined with a unique code and a dynamic import for the corresponding component.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="../classes/ExplorerAction.html" target="_self" >ExplorerActionRendererProvider[]</a></code>
 
                         </div>
+                            <div class="io-description">
+                                <p>An array of action renderer providers.</p>
+
+                            </div>
                 </td>
             </tr>
         </tbody>
@@ -1329,11 +1355,18 @@
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Provides an array of object renderers for the explorer.
+Each renderer is defined with a unique code and a dynamic import for the corresponding component.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>    <code>ExplorerRendererProvider[]</code>
 
                         </div>
+                            <div class="io-description">
+                                <p>An array of object renderer providers.</p>
+
+                            </div>
                 </td>
             </tr>
         </tbody>
@@ -1362,11 +1395,18 @@
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Provides an array of section renderers for the explorer.
+Each renderer is defined with a unique code and a dynamic import for the corresponding component.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>    <code>ExplorerRendererProvider[]</code>
 
                         </div>
+                            <div class="io-description">
+                                <p>An array of section renderer providers.</p>
+
+                            </div>
                 </td>
             </tr>
         </tbody>
