--- a/miscellaneous/typealiases.html
+++ b/miscellaneous/typealiases.html
@@ -331,6 +331,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Defines the possible data types for columns in the explorer.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code>&quot;string&quot; | &quot;number&quot; | &quot;boolean&quot; | &quot;date&quot; | &quot;reference&quot; | &quot;unknown&quot;</code>
 </code>
                 </td>
@@ -343,6 +349,12 @@
                 <td class="col-md-4">
                     <a name="ExplorerActionRendererLoader"></a>
                     <span class="name "><b>ExplorerActionRendererLoader</b><a href="#ExplorerActionRendererLoader"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Represents a loader for an explorer action renderer.</p>
+</div>
                 </td>
             </tr>
             <tr>
@@ -363,6 +375,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Represents a loader for an explorer renderer.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code>literal type</code>
 </code>
                 </td>
@@ -379,6 +397,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Defines the possible variations in the explorer (as example for actions).</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code>&quot;section&quot; | &quot;object&quot;</code>
 </code>
                 </td>
@@ -391,6 +415,12 @@
                 <td class="col-md-4">
                     <a name="RendererId"></a>
                     <span class="name "><b>RendererId</b><a href="#RendererId"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Defines the possible renderer identifiers used in the explorer.</p>
+</div>
                 </td>
             </tr>
             <tr>
@@ -463,6 +493,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Type representing the configuration editor form.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code></code>
 </code>
                 </td>
@@ -475,6 +511,12 @@
                 <td class="col-md-4">
                     <a name="ConfigPropertyEditorResult"></a>
                     <span class="name "><b>ConfigPropertyEditorResult</b><a href="#ConfigPropertyEditorResult"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Type representing the result of editing a configuration property.</p>
+</div>
                 </td>
             </tr>
             <tr>
