--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -396,6 +396,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Tokens for duplicating items.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -418,6 +424,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for explorer action renderers.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -440,6 +452,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for explorer object renderers.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -462,6 +480,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for explorer section renderers.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -488,6 +512,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Tokens for creating items.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -566,6 +596,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Available data types for columns.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -685,6 +721,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Preloader channel for configuration</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -859,6 +901,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Represents a REST tab for the explorer.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
