--- a/interfaces/FieldFilterForm.html
+++ b/interfaces/FieldFilterForm.html
@@ -126,6 +126,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Represents the structure of the field filter form.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
@@ -275,6 +282,9 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {FormControl} from &quot;@angular/forms&quot;;
 
+/**
+ * Represents the structure of the field filter form.
+ */
 export interface FieldFilterForm {
   name: FormControl&lt;string&gt;;
   value: FormControl&lt;string | number | boolean | Date[]&gt;;
