--- a/interfaces/ImagesStatFileItem.html
+++ b/interfaces/ImagesStatFileItem.html
@@ -126,6 +126,14 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Interface representing an image statistics file item.
+This interface extends the MediaFile interface to include a duplicate field.</p>
+
+            </p>
 
             <p class="comment">
                 <h3>Extends</h3>
@@ -203,6 +211,11 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {MediaFile} from &quot;../../../../../../../modules/media&quot;;
 
+
+/**
+ * Interface representing an image statistics file item.
+ * This interface extends the MediaFile interface to include a duplicate field.
+ */
 export interface ImagesStatFileItem extends MediaFile {
   duplicate: MediaFile;
 }
