--- a/miscellaneous/enumerations.html
+++ b/miscellaneous/enumerations.html
@@ -314,6 +314,12 @@
                         <span class="name "><b>ExplorerEvent</b><a href="#ExplorerEvent"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>Enumeration of events related to the explorer object.</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;SaveObject
